# imp022

./: .gitignore  Cargo.toml  README.md  build_all.sh  compose.yaml  rustfmt.toml
archive/: Cargo.toml  Dockerfile
archive/src/: main.rs
backend/: Cargo.toml
backend/assets/data/bio/: city.ron  country.ron
backend/assets/data/mission/: miss001.ron
backend/src/: data.rs
backend/src/data/: data_manager.rs  player.rs
backend/src/data/player/: build_instance.rs  category_instance.rs  player_builder.rs
backend/src/route/: mod.rs  part.rs  player.rs
crates/archive/: Cargo.toml  Dockerfile
crates/archive/src/: main.rs
crates/bazaar/: Cargo.toml  Dockerfile
crates/bazaar/src/: main.rs
crates/courtyard/: Cargo.toml  Dockerfile
crates/courtyard/src/: main.rs
crates/drawbridge/: Cargo.toml  Dockerfile
crates/drawbridge/src/: main.rs
crates/forum/: Cargo.toml  Dockerfile
crates/forum/src/: main.rs
crates/gate/: Cargo.toml  Dockerfile
crates/gate/src/: main.rs
crates/gate/src/message/: gate_header.rs
crates/hall/: Cargo.toml  Dockerfile
crates/hall-lib/: Cargo.toml
crates/hall-lib/src/: core.rs  hall.rs  message.rs  player.rs  util.rs  view.rs
crates/hall-lib/src/core/: attribute.rs  build.rs  command.rs  detail.rs  instruction.rs  intent.rs  stage.rs  token.rs  types.rs
crates/hall-lib/src/hall/: hall_card.rs  hall_detail.rs
crates/hall-lib/src/message/: game_activate.rs  game_build.rs  game_choose_attr.rs  game_choose_intent.rs  game_end_game.rs  game_end_turn.rs  game_play_card.rs  game_resolve_cards.rs  game_resources.rs  game_roll.rs  game_start_game.rs  game_tick.rs  game_update_mission.rs  game_update_state.rs  game_update_tokens.rs
crates/hall-lib/src/player/: player_build.rs  player_card.rs  player_detail.rs  player_part.rs
crates/hall-lib/src/view/: game_actor.rs  game_machine.rs  game_mission.rs  game_mission_node.rs  game_mission_objective.rs  game_process.rs  game_user_state.rs
crates/hall/assets/data/: hall_builds.ron  hall_cards.ron  hall_categories.ron  hall_details.ron  hall_missions.ron
crates/hall/src/: data.rs  lib.rs  logic.rs  main.rs  message.rs  network.rs  private.rs  public.rs
crates/hall/src/data/: core.rs  game.rs  hall.rs  hall_build.rs  hall_card.rs  hall_category.rs  player.rs  player_part.rs  util.rs
crates/hall/src/game/: game_actor.rs  game_machine.rs  game_mission.rs  game_mission_node.rs  game_mission_objective.rs  game_process.rs  game_remote.rs  game_state.rs  game_user.rs  game_user_mission_state.rs  game_user_state.rs
crates/hall/src/logic/: client.rs  game_activate.rs  game_build.rs  game_choose_attr.rs  game_end.rs  game_end_turn.rs  game_play_card.rs  game_start_turn.rs  game_update_state.rs  server.rs  shared.rs
crates/hall/src/manager/: data_manager.rs  player_builder.rs
crates/hall/src/message/: game_activate.rs  game_build.rs  game_choose_attr.rs  game_choose_intent.rs  game_end_game.rs  game_end_turn.rs  game_play_card.rs  game_resolve_cards.rs  game_resources.rs  game_roll.rs  game_start.rs  game_start_game.rs  game_start_turn.rs  game_tick.rs  game_update_state.rs  gamebuild.rs  gamestart.rs
crates/hall/src/network/: broadcaster.rs  util.rs
crates/hall/src/private/: game.rs
crates/hall/src/public/: core.rs  message.rs  player.rs  util.rs  view.rs
crates/jail/: Cargo.toml  Dockerfile
crates/jail/src/: main.rs
crates/lookout/: Cargo.toml  Dockerfile
crates/lookout/sql/: init.sql
crates/lookout/src/: main.rs
crates/shared-net/: Cargo.toml
crates/shared-net/bufferable-derive/: Cargo.toml
crates/shared-net/bufferable-derive/src/: lib.rs
crates/shared-net/src/: client.rs  lib.rs  op.rs  server.rs  sizedbuffers.rs  types.rs  util.rs
crates/smithy/: Cargo.toml
crates/smithy/assets/data/: build.csv  build_company.csv  build_market.csv  card.csv  category.csv  detail.csv  detail_general.csv  detail_specific.csv  mission.csv  smithy-dump.sql
crates/smithy/src/: data.rs  main.rs  save_load.rs
crates/smithy/src/data/: build.rs  build_instance.rs  card.rs  category.rs  category_instance.rs  common.rs  detail.rs  mission.rs  rules.rs  shared.rs
crates/smithy/src/save_load/: hall.rs  vagabond.rs
crates/undertaker/: Cargo.toml  imp022.tpproj
crates/undertaker/src-art/font/: Vagabond.sfd.7z
crates/vagabond/: Cargo.toml
crates/vagabond-lib/: Cargo.toml
crates/vagabond-lib/src/: data.rs
crates/vagabond/assets/atlas/: common.atlas  (+8 more)
crates/vagabond/src/: data.rs  gfx.rs  main.rs  manager.rs  network.rs  screen.rs  system.rs
crates/warehouse/: Cargo.toml  Dockerfile
crates/warehouse-lib/: Cargo.toml
crates/warehouse-lib/src/: data.rs
crates/warehouse/src/: main.rs  manager.rs  rest.rs  route.rs
gate/: Cargo.toml  Dockerfile
gate/src/: main.rs  message.rs
gate/src/message/: gate_header.rs
hall/: Cargo.toml  Dockerfile
hall/assets/data/: hall_builds.ron
hall/src/: lib.rs  main.rs  manager.rs
hall/src/data/: hall_card.rs  hall_category.rs  player.rs  player_build.rs  player_card.rs  player_category.rs
hall/src/manager/: data_manager.rs  player_builder.rs
hall/src/message/: gamebuild.rs  gamestart.rs
shared-data/: Cargo.toml
shared-data/src/: lib.rs  player.rs  rest.rs  types.rs
shared-data/src/player/: card.rs  category.rs
shared-data/src/rest/: part.rs  player.rs
shared-net/: Cargo.toml
shared-net/src/: client.rs  lib.rs  op.rs  server.rs  sizedbuffers.rs  util.rs
vagabond/: Cargo.toml
vagabond/assets/data/: vagabond_cards.ron
vagabond/src/: data.rs  main.rs  manager.rs  screen.rs
vagabond/src/data/: vagabond_category.rs
vagabond/src/game/: game_state.rs  player_state.rs
vagabond/src/manager/: backend_manager.rs
vagabond/src/network/: client_drawbridge.rs  client_gate.rs
vagabond/src/screen/: compose.rs  gameplay.rs  login.rs
vagabond/src/system/: app_state.rs  dragdrop.rs
watchtower/: Cargo.toml  Dockerfile
watchtower/src/: data.rs  main.rs  route.rs
watchtower/src/data/: bio_manager.rs  data_manager.rs  player_bio.rs
watchtower/src/rest/: player.rs
watchtower/src/route/: part.rs  player.rs
(+967 files in other folders)
