[package]
name = "imp022-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5" , features = ["macros"]}
chrono = { version = "0.4.38", default-features = false, features = ["std","serde"] }
rand = { version = "0.8.5" }
ron = { version = "0.8.1" }
serde = { version = "1.0.202", features = ["derive"] }
tokio = { version = "1.37.0" , features = ["full"]}
walkdir = { version = "2.5.0" }
serde_json = "1.0.117"
imp022-shared = { path = "../shared" }

[dev-dependencies]
httpc-test = "0.1.1"
