[package]
name = "hall"
description = "Game service"
version = "0.1.0"
edition = "2021"
authors = ["Scott Barcik <oxooo5co77@impending.org>"]

[dependencies]
rand = { version = "0.9.0-alpha.1" }
ron = { version = "0.8.1" }
serde = { version = "1.0.203" }
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
shared-net = { path = "../shared-net" }
shared-data = { path = "../shared-data" }
