[package]
name = "shared-data"
description = "Common data objects"
version = "0.1.0"
edition = "2021"
authors = ["Scott Barcik <oxooo5co77@impending.org>"]

[dependencies]
serde = { version = "1.0.202", features = ["derive"] }
chrono = { version = "0.4.38", default-features = false, features = ["std","serde"] }
