[package]
name = "shared-net"
description = "Microservice network code"
version = "0.1.0"
edition = "2021"
authors = ["Scott Barcik <oxooo5co77@impending.org>"]

[dependencies]
tokio = { version = "1.37.0", features = ["io-util", "macros", "net", "rt", "signal", "sync", "time"] }

[dev-dependencies]
strum_macros = "0.26.2"
strum = "0.26.2"
