[package]
name = "vagabond"
description = "Bevy client"
version = "0.1.0"
edition = "2021"
authors = ["Scott Barcik <oxooo5co77@impending.org>"]
default-run = "vagabond"

[dependencies]
anyhow = { version = "1.0.86" }
bevy = { version = "0.13.2" }
bevy_egui = { version = "0.27.0", features = ["immutable_ctx"] }
chrono = { version = "0.4.38", default-features = false, features = ["std", "serde"] }
reqwest = { version = "0.12.4", features = ["blocking", "json"] }
rand = { version = "0.8.5" }
ron = { version = "0.8.1" }
serde = { version = "1.0.202", features = ["derive"] }
serde_json = { version = "1.0.117" }
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
shared-data = { path = "../shared-data" }
shared-net = { path = "../shared-net" }
fasthash = { version = "0.4.0" }
