[package]
name = "watchtower"
description = "REST API for data objects"
version = "0.1.0"
edition = "2021"
authors = ["Scott Barcik <oxooo5co77@impending.org>"]

[dependencies]
axum = { version = "0.7.5" , features = ["macros"]}
chrono = { version = "0.4.38", default-features = false, features = ["std","serde"] }
rand = { version = "0.8.5" }
ron = { version = "0.8.1" }
serde = { version = "1.0.203", features = ["derive"] }
tokio = { version = "1.38.0" , features = ["full"]}
walkdir = { version = "2.5.0" }
serde_json = "1.0.117"
shared-data = { path = "../shared-data" }

[dev-dependencies]
httpc-test = "0.1.9"
