[package]
name = "archive"
description = "Archive is the game object inventory service."
version = "0.1.0"
edition = "2021"
authors = ["Scott Barcik <oxooo5co77@impending.org>"]

[dependencies]
sqlx = { version = "0.8.2", features = ["postgres", "macros", "uuid", "runtime-tokio-rustls"] }
tokio = { version = "1.41.1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.11.0", features = ["v4"] }
gate = { path = "../gate" }
shared-net = { path = "../shared-net" }
