[package]
name = "bazaar"
description = "Bazaar is the game object commerce service."
version = "0.1.0"
edition = "2021"
authors = ["Scott Barcik <oxooo5co77@impending.org>"]

[dependencies]
sqlx = { version = "0.8.3", features = ["postgres", "macros", "uuid", "runtime-tokio-rustls"] }
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.19" }
shared-net = { path = "../shared-net" }
