[package]
name = "courtyard"
description = "Courtyard is the central message router."
version = "0.1.0"
edition = "2021"
authors = ["Scott Barcik <oxooo5co77@impending.org>"]

[dependencies]
tokio = { version = "1.40.0", features = ["macros","rt-multi-thread"] }
shared-net = { path = "../shared-net" }
