[package]
name = "courtyard"
description = "Courtyard is the central message router."
version = "0.1.0"
edition = "2024"
authors = ["Scott Barcik <oxooo5co77@impending.org>"]

[dependencies]
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.20" }
shared-net = { path = "../shared-net" }
mimalloc = "0.1.48"
