[package]
name = "drawbridge"
description = "Drawbridge is the client login service."
version = "0.1.0"
edition = "2021"
authors = ["Scott Barcik <oxooo5co77@impending.org>"]

[dependencies]
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }
shared-net = { path = "../shared-net" }
