[package]
name = "forum"
description = "Forum is the chat/messaging service."
version = "0.1.0"
edition = "2024"
authors = ["Scott Barcik <oxooo5co77@impending.org>"]

[dependencies]
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.19" }
shared-net = { path = "../shared-net" }
forum-lib = { path = "../forum-lib" }
mimalloc = "0.1.46"
