[package]
name = "gate"
description = "Gate is the main client interface service."
version = "0.1.0"
edition = "2021"
authors = ["Scott Barcik <oxooo5co77@impending.org>"]

[dependencies]
chrono = { version = "0.4.39" }
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread", "signal"] }
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.19" }
shared-net = { path = "../shared-net" }
