[package]
name = "hall-lib"
description = "Hall is the main gameplay service."
version = "0.1.0"
edition = "2021"
authors = ["Scott Barcik <oxooo5co77@impending.org>"]

[dependencies]
num_enum = { version = "0.7.3" }
rand = { version = "0.9.0" }
serde = { version = "1.0.217", features = ["derive"] }
shared-net = { path = "../shared-net" }

[dev-dependencies]
strum = { version = "0.27.0" }
strum_macros = { version = "0.27.0" }
