[package]
name = "hall-lib"
description = "Hall is the main gameplay service."
version = "0.1.0"
edition = "2024"
authors = ["Scott Barcik <oxooo5co77@impending.org>"]

[dependencies]
num_enum = { version = "0.7.5" }
rand = { version = "0.10.0" }
serde = { version = "1.0.228", features = ["derive"] }
shared-net = { path = "../shared-net" }

[dev-dependencies]
strum = { version = "0.27.2" }
strum_macros = { version = "0.27.2" }
