[package]
name = "hall"
description = "Hall is the main gameplay service."
version = "0.1.0"
edition = "2024"
authors = ["Scott Barcik <oxooo5co77@impending.org>"]

[dependencies]
rand = { version = "0.9.2" }
ron = { version = "0.10.1" }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.19" }
gate-lib = { path = "../gate-lib" }
hall-lib = { path = "../hall-lib" }
shared-net = { path = "../shared-net" }
mimalloc = "0.1.47"
