[package]
name = "hall"
description = "Hall is the main gameplay service."
version = "0.1.0"
edition = "2024"
authors = ["Scott Barcik <oxooo5co77@impending.org>"]

[dependencies]
rand = { version = "0.9.2" }
ron = { version = "0.12.0" }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1.44" }
tracing-subscriber = { version = "0.3.22" }
gate-lib = { path = "../gate-lib" }
hall-lib = { path = "../hall-lib" }
shared-net = { path = "../shared-net" }
mimalloc = "0.1.48"
