[package]
name = "jail"
description = "Jail is the user attribute service."
version = "0.1.0"
edition = "2021"
authors = ["Scott Barcik <oxooo5co77@impending.org>"]

[dependencies]
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
shared-data = { path = "../shared-data" }
shared-net = { path = "../shared-net" }
