[package]
name = "lookout"
description = "Lookout is the user authentication service."
version = "0.1.0"
edition = "2024"
authors = ["Scott Barcik <oxooo5co77@impending.org>"]

[dependencies]
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.8.6", features = ["postgres", "macros", "uuid", "runtime-tokio-rustls"] }
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.19" }
uuid = { version = "1.18", features = ["v4"] }
shared-net = { path = "../shared-net" }
mimalloc = "0.1.48"

[dev-dependencies]
fasthash = { version = "0.4.0" }
