[package]
name = "shared-net"
description = "Microservice network code"
version = "0.1.0"
edition = "2024"
authors = ["Scott Barcik <oxooo5co77@impending.org>"]

[dependencies]
bufferable-derive = { version = "0.1.0", path = "bufferable-derive" }
num_enum = { version = "0.7.3" }
tokio = { version = "1.45.0", features = ["io-util", "macros", "net", "rt", "signal", "sync", "time"] }
tracing = { version = "0.1.41" }

[dev-dependencies]
strum_macros = { version = "0.27.1" }
strum = { version = "0.27.1" }
