[package]
name = "smithy"
description = "Smithy is the data manipulation utility."
version = "0.1.0"
edition = "2024"
authors = ["Scott Barcik <oxooo5co77@impending.org>"]

[dependencies]
clap = { version = "4.5.58", features = ["derive"] }
ron = { version = "0.12.0" }
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio"] }
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
hall-lib = { path = "../hall-lib" }
vagabond-lib = { path = "../vagabond-lib" }
