[package]
name = "vagabond"
description = "Vagabond is the Bevy-based game client."
version = "0.1.0"
edition = "2021"
authors = ["Scott Barcik <oxooo5co77@impending.org>"]
default-run = "vagabond"

[dependencies]
anyhow = { version = "1.0.95" }
bevy = { version = "0.15.1" }
bevy_simple_text_input = { version = "0.10.2" }
cached = { version = "0.54.0" }
fasthash = { version = "0.4.0" }
rand = { version = "0.9.0" }
reqwest = { version = "0.12.12", features = ["blocking", "json"] }
ron = { version = "0.9.0-alpha.1" }
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
shared-net = { path = "../shared-net" }
hall = { path = "../hall" }
warehouse = { path = "../warehouse" }
