[package]
name = "vagabond"
description = "Vagabond is the Bevy-based game client."
version = "0.1.0"
edition = "2024"
authors = ["Scott Barcik <oxooo5co77@impending.org>"]
default-run = "vagabond"

[dependencies]
anyhow = { version = "1.0.98" }
bevy = { version = "0.16.1" }
bevy_simple_text_input = { version = "0.11.1" }
cached = { version = "0.56.0" }
fasthash = { version = "0.4.0" }
reqwest = { version = "0.12.22", features = ["blocking", "json"] }
ron = { version = "0.10.1" }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.47.0", features = ["macros", "rt-multi-thread"] }
shared-net = { path = "../shared-net" }
archive-lib = { path = "../archive-lib" }
forum-lib = { path = "../forum-lib" }
hall-lib = { path = "../hall-lib" }
vagabond-lib = { path = "../vagabond-lib" }
warehouse-lib = { path = "../warehouse-lib" }
mimalloc = "0.1.47"
dotenvy = "0.15.7"
