[package]
name = "vagabond"
description = "Vagabond is the Bevy-based game client."
version = "0.1.0"
edition = "2024"
authors = ["Scott Barcik <oxooo5co77@impending.org>"]
default-run = "vagabond"

[dependencies]
anyhow = { version = "1.0.100" }
bevy = { version = "0.17.1", default-features = false, features = [
    "std",
    "async_executor",
#    "android-game-activity",
#    "android_shared_stdcxx",
    "animation",
    "bevy_asset",
    "bevy_audio",
    "bevy_color",
    "bevy_core_pipeline",
    "bevy_post_process",
    "bevy_anti_alias",
    "bevy_gilrs",
    "bevy_gizmos",
#    "bevy_gltf",
    "bevy_input_focus",
    "bevy_log",
    "bevy_mesh_picking_backend",
    "bevy_pbr",
    "bevy_picking",
    "bevy_render",
    "bevy_scene",
    "bevy_image",
    "bevy_mesh",
    "bevy_camera",
    "bevy_light",
    "bevy_shader",
    "bevy_sprite",
    "bevy_sprite_picking_backend",
    "bevy_sprite_render",
    "bevy_state",
    "bevy_text",
    "bevy_ui",
    "bevy_ui_picking_backend",
    "bevy_ui_render",
    "bevy_window",
    "bevy_winit",
    "custom_cursor",
    "default_font",
    "hdr",
#    "ktx2",
    "multi_threaded",
    "png",
    "reflect_auto_register",
    "smaa_luts",
    "sysinfo_plugin",
    "tonemapping_luts",
#    "vorbis",
    "webgl2",
    "x11",
#    "wayland",
    "debug",
    "zstd_rust"
] }
bevy_simple_text_input = { version = "0.12.0" }
cached = { version = "0.56.0" }
fasthash = { version = "0.4.0" }
reqwest = { version = "0.12.23", features = ["blocking", "json"] }
ron = { version = "0.11.0" }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
shared-net = { path = "../shared-net" }
archive-lib = { path = "../archive-lib" }
forum-lib = { path = "../forum-lib" }
hall-lib = { path = "../hall-lib" }
vagabond-lib = { path = "../vagabond-lib" }
warehouse-lib = { path = "../warehouse-lib" }
mimalloc = "0.1.48"
dotenvy = "0.15.7"
