[package]
name = "warehouse-lib"
description = "Warehouse is the REST API for string data objects."
version = "0.1.0"
edition = "2024"
authors = ["Scott Barcik <oxooo5co77@impending.org>"]


[dependencies]
chrono = { version = "0.4.39", default-features = false, features = ["std", "serde"] }
serde = { version = "1.0.218", features = ["derive"] }
shared-net = { path = "../shared-net" }
