[package]
name = "warehouse"
description = "Warehouse is the REST API for string data objects."
version = "0.1.0"
edition = "2024"
authors = ["Scott Barcik <oxooo5co77@impending.org>"]

[dependencies]
axum = { version = "0.8.4", features = ["macros"] }
chrono = { version = "0.4.41", default-features = false, features = ["std", "serde"] }
rand = { version = "0.9.2" }
ron = { version = "0.10.1" }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.19" }
shared-net = { path = "../shared-net" }
warehouse-lib = { path = "../warehouse-lib" }
mimalloc = "0.1.47"

[dev-dependencies]
httpc-test = "0.1.10"

[features]
network-tests = []
