[package]
name = "warehouse"
description = "Warehouse is the REST API for string data objects."
version = "0.1.0"
edition = "2024"
authors = ["Scott Barcik <oxooo5co77@impending.org>"]

[dependencies]
axum = { version = "0.8.8", features = ["macros"] }
chrono = { version = "0.4.43", default-features = false, features = ["std", "serde"] }
rand = { version = "0.9.2" }
ron = { version = "0.12.0" }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.49.0", features = ["full"] }
tracing = { version = "0.1.44" }
tracing-subscriber = { version = "0.3.22" }
shared-net = { path = "../shared-net" }
warehouse-lib = { path = "../warehouse-lib" }
mimalloc = "0.1.48"

[dev-dependencies]
httpc-test = "0.1.10"

[features]
network-tests = []
